@@ -114,7 +114,7 @@ private Q_SLOTS:
 
 private:
     void sendLastFmQuery(const QString &fixedQuery, int page);
-    void sendGoogleQuery(const QString &fixedQuery, int page);
+    //void sendGoogleQuery(const QString &fixedQuery, int page);
     void sendSpotifyQuery(const QString &fixedQuery);
     void sendITunesQuery(const QString &fixedQuery);
     void sendDeezerQuery(const QString &fixedQuery);
@@ -125,7 +125,7 @@ private:
     void clearTempFiles();
     void sendQueryRequest(const QUrl &url, const QString &host=QString());
     void parseLastFmQueryResponse(const QByteArray &resp);
-    void parseGoogleQueryResponse(const QByteArray &resp);
+    //void parseGoogleQueryResponse(const QByteArray &resp);
     void parseCoverArtArchiveQueryResponse(const QByteArray &resp);
     void parseSpotifyQueryResponse(const QByteArray &resp);
     void parseITunesQueryResponse(const QByteArray &resp);
